asset/css/admin.css
/* Globals */

#page-action-menu {
    display: inline-block;
    position: relative;
}

#page-action-menu ul {
    display: none;
    list-style: none;
    border: 1px solid #dfdfdf;
    background-color: #fff;
    border-radius: 3px;
    text-align: left;
    padding: 0;
    position: relative;
    box-shadow: 0 0 5px #dfdfdf;
    position: absolute;
    right: 0;
    width: auto;
    white-space: nowrap;
    margin: 12px 0;
}

#page-action-menu ul:before {
    content: "";
    position: absolute;
    bottom: calc(100% - 1px);
    right: 12px;
    width: 0;
    height: 0;
    border-bottom: 12px solid #fff;
    border-left: 6px solid transparent;
    border-right: 6px solid transparent;
}

#page-action-menu ul:after {
    content: "";
    position: absolute;
    bottom: calc(100% - 1px);
    right: 11px;
    width: 0;
    height: 0;
    border-bottom: 14px solid #dfdfdf;
    border-left: 7px solid transparent;
    border-right: 7px solid transparent;
    z-index: -1;
}

#page-action-menu ul a,
#page-action-menu ul .inactive {
    padding: 6px 12px 5px;
    display: block;
    position: relative;
}

#page-action-menu ul .inactive {
    color: #dfdfdf;
}

#page-action-menu ul a:hover:before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    width: 3px;
    background-color: #dfdfdf;
}

#page-action-menu ul li:not(:last-child) a,
#page-action-menu ul li:not(:last-child) span {
    border-bottom: 1px solid #dfdfdf;
}

#page-action-menu .expand:after {
    content: "\f0d7";
}

#page-action-menu .expand:after,
#page-action-menu .collapse:after {
    margin-left: 6px;
}

#page-action-menu .collapse + .collapsible {
    overflow: visible;
    display: block;
}

.breadcrumbs > *:not(:last-child):after {
    content: none;
}

.breadcrumbs .separator {
    display: inline-block;
    margin: 0 6px;
    color: #000;
}

.breadcrumbs .separator:after {
    content: "\f0da";
    font-family: "Font Awesome 5 Free";
    margin: 0;
    font-weight: 900;
}

/* Browse */

.browse .browse-controls {
    justify-content: space-between;
    width: 100%;
    clear: both;
}

.browse .browse-controls > form,
.browse .browse-controls > div,
.browse .browse-controls > nav,
.browse .browse-controls > a {
    width: 50%;
}

.browse .browse-controls .sorting,
.browse .browse-controls .filtering {
    text-align: right;
}

.browse-controls .pagination {
    order: 1;
}

.browse-controls .sorting {
    order: 2;
}

.browse-controls > a {
  order: 3;
}

.browse-controls .filtering {
  order: 4;
  margin-left: 0;
}

/* Form Builder */

#form-builder-fields fieldset {
  position: relative;
  padding: 4px;
  background-color: rgba(0,0,0,0.04);
  margin-bottom: 8px;
}

#form-builder-fields legend {
  float: left;
  display: flex;
  align-items: center;
  padding: 6px;
  font-weight: bold;
  width: calc(100% + 8px);
  position: relative;
  padding-left: 48px;
  margin-bottom: 16px;
}

#form-builder-fields legend:after {
  content: "";
  position: absolute;
  top: -4px;
  right: -4px;
  left: -4px;
  bottom: -4px;
  background-color: rgba(0,0,0,0.12);
}

legend:before {
  text-indent: 0;
  font-size: 12px;
  position: absolute;
  top: -4px;
  left: -4px;
  width: 44px;
  height: 44px;
  background-color: rgba(0,0,0,0.5);
  text-align: center;
  line-height: 44px;
  color: #fff;
}

fieldset.number legend:before {
  content: "123";
}

fieldset.text legend:before {
  content: "ABC";
}

.field-actions {
  position: absolute;
  top: 0;
  right: 4px;
  margin-top: 4px;
  text-align: right;
  z-index: 10;
}

.field-actions button {
  box-shadow: none;
  background-color: transparent;
  opacity: .75;
  cursor: pointer;
  width: 36px;
}

.field-actions button:hover {
  box-shadow: none;
  opacity: 1;
  cursor: pointer;
}

#form-builder-fields fieldset:only-of-type .field-position-increment,
#form-builder-fields fieldset:only-of-type .field-position-decrement,
#form-builder-fields fieldset:first-of-type .field-position-decrement,
#form-builder-fields fieldset:last-of-type .field-position-increment {
  display: none;
}

.field-enable,
.field-disable,
.field-collapse,
.field-expand {
  display: none;
}

.field-actions .active {
  display: inline-block;
}

#form-builder-fields .field {
  padding: 0;
  border-color: transparent;
  background-color: transparent;
}

.field.closed {
    height: 0;
    overflow: hidden;
    margin: 0;
}

